--- a/kafka/kafka.vcxproj.filters
+++ b/kafka/kafka.vcxproj.filters
@@ -26,5 +26,8 @@
     <MASM Include="ntprotect.asm">
       <Filter>Source Files</Filter>
     </MASM>
+    <MASM Include="ntthread.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
