--- a/kafka/kafka.vcxproj.filters
+++ b/kafka/kafka.vcxproj.filters
@@ -46,5 +46,8 @@
     <ClInclude Include="ntwrappers.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="obfstring.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
