--- a/kafka/kafka.vcxproj.filters
+++ b/kafka/kafka.vcxproj.filters
@@ -32,6 +32,9 @@
     <MASM Include="ntthread.asm">
       <Filter>Source Files</Filter>
     </MASM>
+    <MASM Include="ntdelay.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="crypto.h">
@@ -47,6 +50,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="obfstring.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lostwritings.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
